--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  @apply bg-slate-900 font-poppins text-slate-50;
+}
+
+.brand {
+  @apply font-bold text-red-300;
+}
+
+.brand-one {
+  @apply text-purple-300;
+}
+.brand-two {
+  @apply text-cyan-300;
+}
+.brand-three {
+  @apply text-purple-300;
+}
