--- a/client/src/components/Column/Column.module.css
+++ b/client/src/components/Column/Column.module.css
@@ -5,15 +5,19 @@
 }
 
 .column_title_container {
-  @apply flex justify-between items-center bg-slate-50 px-2 py-1;
+  @apply flex justify-between items-center gap-4 bg-slate-50 px-2 py-1;
 }
 
 .column_title_text {
-  @apply font-semibold text-slate-900;
+  @apply font-semibold text-slate-900 px-2;
+}
+
+.column_title_input {
+  @apply border-none font-semibold text-slate-900 w-full px-2;
 }
 
 .column_options {
-  @apply opacity-0 text-slate-900 cursor-pointer;
+  @apply opacity-0 text-lg text-slate-900 cursor-pointer;
 }
 
 .column_container:hover .column_options {
@@ -27,7 +31,7 @@
 /* Item styles */
 
 .item_container {
-  @apply flex justify-between items-center bg-slate-800 rounded-lg w-full px-2 py-1;
+  @apply flex justify-between items-center gap-4 bg-slate-800 rounded-lg w-full px-2 py-1;
 }
 
 .item_text {
@@ -35,11 +39,11 @@
 }
 
 .item_input {
-  @apply bg-slate-800 border border-slate-50 rounded-md pl-2 pr-1;
+  @apply bg-slate-800 border border-slate-50 rounded-md w-full pl-2 pr-1;
 }
 
 .item_edit_button {
-  @apply opacity-0 hover:text-purple-300;
+  @apply opacity-0 hover:text-slate-50/80 h-full;
 }
 
 .item_container:hover .item_edit_button {
