--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -14,10 +14,10 @@
   @apply flex items-center gap-4 font-medium;
 }
 
-.navbar_login_link {
+.navbar_link {
   @apply hover:text-slate-50/80 transition-colors duration-200 ease-in-out hover:cursor-pointer;
 }
 
-.navbar_signup_link {
+.navbar_cta_link {
   @apply bg-slate-50 hover:bg-slate-50/80 rounded-lg text-slate-900 px-2 py-1 transition-colors duration-200 ease-in-out hover:cursor-pointer;
 }
